--- a/chronometre.html
+++ b/chronometre.html
@@ -14,7 +14,9 @@
         text-align: center;
         margin-top: 30px;
       }
-
+      .heden{
+        display: none;
+      }
       .error-p{
         
         box-shadow: 0 0 6px rgba(255, 0, 0, 0.6);
